fix: make the pokemon not spawn behind buttons

--- a/floating-islands/style.css
+++ b/floating-islands/style.css
@@ -46,8 +46,10 @@ body {
   background: linear-gradient(180deg, #ff0000, #ffffff);
   border: 3px solid black;
   color: black;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: bold;
+  font-family: "pf-videotext", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.1em;
   padding: 2em;
   border-radius: 0.5em;
   display: inline-block;
